fixed portfolio images not centered

--- a/_includes/styles/portfolio.css
+++ b/_includes/styles/portfolio.css
@@ -165,6 +165,12 @@
         width: 100%;
         object-fit: contain;
     }
+
+    & picture {
+        margin-left: auto;
+        margin-right: auto;
+
+    }
 }
 
 [theme="dark"] .portfolio-wrapper__projects {
